--- a/app/src/main/res/layout/activity_madlibs_form.xml
+++ b/app/src/main/res/layout/activity_madlibs_form.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/background"
-         />
+        android:scaleType="fitXY" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -108,6 +108,7 @@
         android:layout_marginTop="20dp"/>
 
     <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
