--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/background"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteY="0dp"
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/story1"
@@ -23,30 +24,4 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="31dp" />
 
-    <TextView
-        android:id="@+id/noun1"
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
-        android:text="@string/noun"
-        android:textColor="#ffff"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="31dp"
-        android:layout_marginLeft="163dp"
-        android:layout_marginStart="163dp"
-        android:layout_alignBaseline="@+id/story2"
-        android:layout_alignBottom="@+id/story2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:id="@+id/story2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/story2"
-        android:textColor="#ffff"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="31dp"
-        android:layout_alignBottom="@+id/story1"
-        android:layout_alignRight="@+id/story1"
-        android:layout_alignEnd="@+id/story1" />
 </RelativeLayout>
